--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
@@ -20,6 +21,7 @@
     "next": "16.0.7",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
