--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
+    "posthog-js": "^1.331.0",
     "react": "19.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "19.2.0",
